# llcat

./: Cargo.toml  README.md
benches/: lexer.rs  string_interning.rs
examples/: fib.llc  fib_recursion.llc  function_graph.rs  sum.llc
llcat-bytecode/: Cargo.toml
llcat-bytecode/src/: bytecode.rs  lib.rs
llcat-bytecode/src/bytecode/: _type.rs  block.rs  generator.rs  instruction.rs  module.rs
llcat-bytecode/tests/: bytecode_test.rs
llcat-macros/: Cargo.toml
llcat-macros/src/: lib.rs
llcat-parser/: Cargo.toml
llcat-parser/benches/: lex_bench.rs  parse_bench.rs
llcat-parser/src/: ast.rs  lib.rs  mir.rs  parser.rs  small_vec.rs  token.rs
llcat-parser/src/ast/: binop.rs  decl.rs  expr.rs  import.rs  literal.rs  module.rs  stmt.rs  unop.rs
llcat-parser/src/mir/: basic_block.rs  module.rs  statement.rs  translator.rs
llcat-parser/tests/: ast_test.rs
llcat-vm/: Cargo.toml
llcat-vm/benches/: bench.rs
llcat-vm/src/: context.rs  error.rs  lib.rs  runtime.rs  stack.rs  typed_pool.rs  value.rs
llcat-vm/tests/: integration.rs
src/: arena.rs  lib.rs
src/bytecode/: analyzer.rs  compiler.rs  instruction.rs  mod.rs  types.rs
src/parser/: ast.rs  intern.rs  intern2.rs  intern_old.rs  lexer.rs  mod.rs  parser.rs  peg.rs  pretty_ast.rs  visit.rs
src/vm/: bytecode.rs  executor.rs  mod.rs  runtime_error.rs  stack.rs  value.rs
src/vm/bytecode/: compiler.rs
src/vm_old/: context.rs  mod.rs  stack.rs
src/vm_old/bytecode/: compiler.rs  instruction.rs
