[package]
name = "llcat"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = { version = "0.8.11", features = ["compile-time-rng", "serde"] }
chumsky = { version = "1.0.0-alpha.7", features = ["pratt", "regex", "serde", "sync"] }
lasso = { version = "0.7.3", features = ["serialize", "inline-more"] }
logos = "0.14.2"
pretty = { version = "0.12.3", features = ["termcolor"] }
smallvec = { version = "2.0.0-alpha.7", features = ["serde"] }
smol_str = { version = "0.3.2", features = ["serde"] }
thiserror = "2.0.3"
