[package]
name = "llcat"
version = "0.1.0"
edition = "2021"

[dependencies]
llcat-macros ={ path = "./llcat-macros"}

ahash = { version = "0.8.11", features = ["compile-time-rng", "serde"] }
allocator-api2 = { version = "0.2.20", features = [] }
bumpalo = { version = "3.16.0", features = ["allocator-api2", "allocator_api"] }
byteorder = "1.5.0"
caches = "0.2.8"
chumsky = { version = "1.0.0-alpha.8", features = ["pratt", "regex", "serde"] }
hashbrown = { version = "0.15.2", features = ["serde", "rayon"] }
logos = "0.14.2"
once_cell = "1.20.2"
paste = "1.0.15"
pretty = { version = "0.12.3", features = ["termcolor"] }
rand = { version = "0.9.0-beta.0", features = ["simd_support"] }
smallvec = { version = "2.0.0-alpha.7", features = ["serde"] }
smol_str = { version = "0.3.2", features = ["serde"] }
thiserror = "2.0.3"
rust_decimal = { version = "1.36.0", features = ["rand", "maths"] }
rust_decimal_macros = "1.36.0"
amplify_derive = "4.0.1"
ariadne = { version = "0.5.0", features = ["auto-color"] }
peg = "0.8.4"
anyhow = "1.0.95"

[dev-dependencies]
lasso = { version = "0.7.3", features = ["serialize", "inline-more"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "string_interning"
harness = false

[[bench]]
name = "lexer"
harness = false
