[package]
name = "llcat-vm"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
byteorder = "1.5.0"
llcat-bytecode.workspace = true
anyhow.workspace = true
thiserror.workspace = true
smallvec.workspace = true

[dev-dependencies]
snmalloc-rs = {version = "0.3.4",features = ["native-cpu"]}
mimalloc-rust = "0.2.1"
#pprof = { version = "0.13", features = ["flamegraph"] }